--- a/style.css
+++ b/style.css
@@ -238,6 +238,14 @@
     transition: transform .3s ease;
   }
 
+  .switcher-container:active {
+    background-color: var(--color-fill);
+  }
+
+  .mode-switcher:active {
+    background-color: var(--color-toogle-bg);
+  }
+
   .switcher-icon-container {
     width: 100%;
     height: 100%;
