--- a/style.css
+++ b/style.css
@@ -254,6 +254,14 @@
     background-color: var(--color-toogle-bg);
   }
 
+  .switcher-container:focus {
+    background-color: pink;
+  }
+
+  .mode-switcher:focus {
+    background-color: pink;
+  }
+
   .switcher-icon-container {
     width: 100%;
     height: 100%;
