--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@
   }
 
   .switcher-container:hover {
-    background-color: pink;
+    background-color: orange;
   }
 
   .switcher-container:active {
