--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@
     right: 40%;
     position: absolute;
     transition: transform .3s ease;
+    cursor: pointer;
   }
 
   .switcher-icon-container {
